--- a/DAY1/htmlTagSearch.html
+++ b/DAY1/htmlTagSearch.html
@@ -1,30 +1,49 @@
-<h2>b tag</h2>
-<p>This b tag element make text boldface. It is mostly used to draw reader's attention to the elements's content. b tag
-    should not used for styling text.</p>
-<hr>
-<h2>i tag</h2>
-<p>The i tag element represents a range of text that is set off from the normal text for some reason, such as
-    idiomatic text, technical terms, taxonomical designations, among others. Historically, these have been presented
-    using italicized type, which is the original source of the i tag naming of this element</p>
-<hr>
-<h2>u tag</h2>
-<p>In the original HTML Underline (u tag) element was deprecated in HTML 4; however, u tag was restored in HTML 5 with a
-    new, semantic, meaning: to mark text as having some form of non-textual annotation applied.</p>
-<hr>
-<h2>select tag</h2>
-<p>The select tag element has some unique attributes you can use to control it, such as multiple to specify whether
-    multiple options can be selected, and size to specify how many options should be shown at once. It also accepts most
-    of the general form input attributes such as required, disabled, autofocus, etc.</p>
-<hr>
-<h2>button tag</h2>
-<p>The button tag HTML element is an interactive element activated by a user with a mouse, keyboard, finger, voice
-    command, or other assistive technology. Once activated, it then performs a programmable action, such as
-    submitting a form or opening a dialog.</p>
-<hr>
-<h2>hr tag</h2>
-<p>The hr tag HTML element represents a thematic break between paragraph-level elements: for example, a change of scene
-    in a story, or a shift of topic within a section.</p>
-<hr>
-<h2>br tag</h2>
-<p>The br tag HTML element produces a line break in text (carriage-return). It is useful for writing a poem or an
-    address, where the division of lines is significant.</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Tags Search</title>
+</head>
+
+<body>
+    <hr><hr><h1 align="center">HTML Tags</h1><hr><hr>
+    <h2>b tag</h2>
+    <p>This b tag element make text boldface. It is mostly used to draw reader's attention to the elements's content. b
+        tag
+        should not used for styling text.</p>
+    <hr>
+    <h2>i tag</h2>
+    <p>The i tag element represents a range of text that is set off from the normal text for some reason, such as
+        idiomatic text, technical terms, taxonomical designations, among others. Historically, these have been presented
+        using italicized type, which is the original source of the i tag naming of this element</p>
+    <hr>
+    <h2>u tag</h2>
+    <p>In the original HTML Underline (u tag) element was deprecated in HTML 4; however, u tag was restored in HTML 5
+        with a
+        new, semantic, meaning: to mark text as having some form of non-textual annotation applied.</p>
+    <hr>
+    <h2>select tag</h2>
+    <p>The select tag element has some unique attributes you can use to control it, such as multiple to specify whether
+        multiple options can be selected, and size to specify how many options should be shown at once. It also accepts
+        most
+        of the general form input attributes such as required, disabled, autofocus, etc.</p>
+    <hr>
+    <h2>button tag</h2>
+    <p>The button tag HTML element is an interactive element activated by a user with a mouse, keyboard, finger, voice
+        command, or other assistive technology. Once activated, it then performs a programmable action, such as
+        submitting a form or opening a dialog.</p>
+    <hr>
+    <h2>hr tag</h2>
+    <p>The hr tag HTML element represents a thematic break between paragraph-level elements: for example, a change of
+        scene
+        in a story, or a shift of topic within a section.</p>
+    <hr>
+    <h2>br tag</h2>
+    <p>The br tag HTML element produces a line break in text (carriage-return). It is useful for writing a poem or an
+        address, where the division of lines is significant.</p>
+</body>
+
+</html>
