Html Tag updated

--- a/DAY1/htmlTagSearch.html
+++ b/DAY1/htmlTagSearch.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <hr><hr><h1 align="center">HTML Tags</h1><hr><hr>
+    <hr><hr><h1 align="center"><i>HTML Tags</i></h1><hr><hr>
     <h2>b tag</h2>
     <p>This b tag element make text boldface. It is mostly used to draw reader's attention to the elements's content. b
         tag
