Masai Simple Layout updated

--- a/DAY1/masaiSimpleLayout.html
+++ b/DAY1/masaiSimpleLayout.html
@@ -46,7 +46,7 @@
     <p>If you want to contact me, please fill in this form:</p>
     <div>
         <div>
-            Name : <input type="text">
+            Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="text">
         </div>
         <br>
         <div>
@@ -54,7 +54,7 @@
         </div>
         <br>
         <div>
-            email id: <input type="email">
+            email id:&nbsp;&nbsp; <input type="email">
         </div>
     </div>
 
